# lua-bullet

./: .gitignore  .gitmodules  CMakeLists.txt  README.mkd
assets/: brick.ive  dice.ive  floor.ive
examples/: Example01.lua  Example02.lua  Example03.lua  Example04.lua  Example05.lua  Example06.lua  Example07.lua  dice.lua  dice_drop.lua  simpleLights.lua
examples/Brick_Wall/: brickwall.lua
examples/Dice_Drop/: dice_drop.lua
examples/includes/: bitwise_inclusive_or.lua
extras/: FindLuaBullet.cmake
src/: BindingFwd.h  CMakeLists.txt  ClassInfo.cpp  ClassInfo.h  CreationRecord.cpp  LuaInclude.h  LuaInterface.h  ModuleEntryPoint.cpp  ModuleEntryPoint.h  OverrideosgLuabind.h  Version.h
src/BulletCollision/BroadphaseCollision/: btAxisSweep3.cpp  btBroadphaseInterface.cpp  btBroadphaseProxy.cpp  btCollisionAlgorithm.cpp  btDbvtBroadphase.cpp  btDispatcher.cpp
src/BulletCollision/CollisionDispatch/: btActivatingCollisionAlgorithm.cpp  btCollisionDispatcher.cpp  btCollisionObject.cpp  btCollisionWorld.cpp  btDefaultCollisionConfiguration.cpp
src/BulletCollision/CollisionShapes/: btBoxShape.cpp  btCollisionShape.cpp  btCompoundShape.cpp  btConcaveShape.cpp  btConvexInternalShape.cpp  btConvexShape.cpp  btConvexTriangleMeshShape.cpp  btCylinderShape.cpp  btPolyhedralConvexShape.cpp  btSphereShape.cpp  btStaticPlaneShape.cpp  btStridingMeshInterface.cpp  btTriangleMeshShape.cpp
src/BulletCollision/Gimpact/: btGImpactCollisionAlgorithm.cpp
src/BulletDynamics/ConstraintSolver/: btConstraintSolver.cpp  btSequentialImpulseConstraintSolver.cpp
src/BulletDynamics/Dynamics/: btDiscreteDynamicsWorld.cpp  btDynamicsWorld.cpp  btRigidBody.cpp
src/LinearMath/: btAlignedAllocator.cpp  btMotionState.cpp  btQuadWord.cpp  btQuaternion.cpp  btTransform.cpp  btVector3.cpp
src/osgbCollision/: CollectVerticesVisitor.cpp  CollisionShapes.cpp  CollisionShapes.h  ComputeCylinderVisitor.cpp  ComputeShapeVisitor.cpp  ComputeTriMeshVisitor.cpp
src/osgbDynamics/: CreationRecord.cpp  MotionState.cpp  PhysicsData.cpp  PhysicsState.cpp  PhysicsThread.cpp  RigidBody.cpp
submodules/: CMakeLists.txt
tests/: CMakeLists.txt  createVector.lua
